Se actualiza .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
-PORT=3333
-HOST=0.0.0.0
-NODE_ENV=development
-APP_KEY=GENERATE_WITH_ADONIS
-DRIVE_DISK=local
-DB_CONNECTION=pg
-PG_HOST=127.0.0.1
-PG_PORT=5432
-PG_USER=lucid
-PG_PASSWORD=
-PG_DB_NAME=lucid
+PORT=x
+HOST=x
+NODE_ENV=x
+APP_KEY=x
+DRIVE_DISK=x
+
+# Supabase conection
+DB_CONNECTION=x
+
+PG_HOST=x
+PG_PORT=x
+PG_USER=x
+PG_PASSWORD=x
+PG_DB_NAME=x
