--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.11",
     "axios": "^1.12.2",
+    "epayco-sdk-node": "github:epayco/epayco-node",
     "luxon": "^3.7.2",
     "pg": "^8.16.3",
     "proxy-addr": "^2.0.7",
